# ethys-python

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  env.example  llm.txt  llms.txt  pyproject.toml
.github/workflows/: ci.yml
.well-known/: agents.json
docs/: 12-28-review.md
examples/: connect_and_verify.py  discovery_search.py  submit_telemetry.py
src/ethys402/: __init__.py  auth.py  client.py  errors.py  types.py  utils.py
tests/: __init__.py  test_auth.py  test_client.py  test_types.py  test_utils.py
